--- a/src/app/shared/components/header/header.component.scss
+++ b/src/app/shared/components/header/header.component.scss
@@ -4,3 +4,20 @@
   display: flex;
   justify-content: space-between;
 }
+
+.toolbar-container-actions {
+  display: flex;
+  align-items: center;
+}
+.account-plate {
+  padding: 0.25rem 1rem;
+  display: flex;
+  align-items: center;
+  border: 1px solid white;
+  border-radius: 1rem;
+  transition: background 0.2s ease-in;
+
+  &:hover {
+    background: rgba(255,255,255,0.25);
+  }
+}
