--- a/src/app/components/home/components/user-list/user-list.component.html
+++ b/src/app/components/home/components/user-list/user-list.component.html
@@ -1,51 +1,38 @@
 <div class='w-100 mt-5'>
-  <table mat-table [dataSource]="dataSource" class="mat-elevation-z8 demo-table w-100">
-    <!-- Position Column -->
-    <ng-container matColumnDef="position">
-      <th mat-header-cell *matHeaderCellDef>No.</th>
-      <td mat-cell *matCellDef="let element">{{element.position}}</td>
+  <table mat-table [dataSource]="accounts" class="mat-elevation-z8 demo-table w-100">
+    <ng-container matColumnDef="accountNumber">
+      <th mat-header-cell *matHeaderCellDef>N° Cuenta</th>
+      <td mat-cell *matCellDef="let element">{{element.accountNumber}}</td>
     </ng-container>
 
-    <!-- Name Column -->
     <ng-container matColumnDef="name">
-      <th mat-header-cell *matHeaderCellDef>Name</th>
+      <th mat-header-cell *matHeaderCellDef>Nombre titular</th>
       <td mat-cell *matCellDef="let element">{{element.name}}</td>
     </ng-container>
 
-    <!-- Weight Column -->
-    <ng-container matColumnDef="weight">
-      <th mat-header-cell *matHeaderCellDef>Weight</th>
-      <td mat-cell *matCellDef="let element">{{element.weight}}</td>
+    <ng-container matColumnDef="dni">
+      <th mat-header-cell *matHeaderCellDef>RUT</th>
+      <td mat-cell *matCellDef="let element">{{element.dni}}</td>
     </ng-container>
 
-    <!-- Symbol Column -->
-    <ng-container matColumnDef="symbol">
-      <th mat-header-cell *matHeaderCellDef>Symbol</th>
-      <td mat-cell *matCellDef="let element">{{element.symbol}}</td>
+    <ng-container matColumnDef="bank">
+      <th mat-header-cell *matHeaderCellDef>Banco</th>
+      <td mat-cell *matCellDef="let element">{{element.bank}}</td>
     </ng-container>
+
+    <ng-container matColumnDef="accountType">
+      <th mat-header-cell *matHeaderCellDef>Tipo de Cuenta</th>
+      <td mat-cell *matCellDef="let element">{{element.accountType}}</td>
+    </ng-container>
+
+
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr
       mat-row
-      (click)="clickedRows.add(row)"
-      [class.demo-row-is-clicked]="clickedRows.has(row)"
+      (click)='setUser(row)'
       *matRowDef="let row; columns: displayedColumns;"
+      class="cursor-pointer"
     ></tr>
   </table>
-
-  <div>
-    <h3>
-      Click Log
-    </h3>
-  </div>
-
-  <div *ngIf="!clickedRows.size">
-    Clicked rows will be logged here
-  </div>
-
-  <ul>
-    <li *ngFor="let clickedRow of clickedRows">
-      Clicked on {{clickedRow.name}}
-    </li>
-  </ul>
 </div>
