--- a/src/app/components/transaction-history/pages/transaction-history.component.html
+++ b/src/app/components/transaction-history/pages/transaction-history.component.html
@@ -1,5 +1,5 @@
 <mat-card class="py-6 px-7">
   <h1>Historial</h1>
-  <h2>Todas las transacciones para Sebastian</h2>
-  <app-transaction-list></app-transaction-list>
+  <h2>Todas las transacciones para la cuenta {{ user?.accountNumber }}</h2>
+  <app-transaction-list [transactions]='transactions'></app-transaction-list>
 </mat-card>
