--- a/src/styles/_utilities.scss
+++ b/src/styles/_utilities.scss
@@ -1,3 +1,6 @@
 @import "utilities/spacing";
 @import "utilities/sizing";
 @import "utilities/behavior";
+@import "utilities/flex";
+@import "utilities/displays";
+@import "utilities/texts";
