--- a/src/app/components/transaction-history/components/transaction-list.component.html
+++ b/src/app/components/transaction-history/components/transaction-list.component.html
@@ -5,7 +5,7 @@
 
     <ng-container matColumnDef="date">
       <th mat-header-cell *matHeaderCellDef>Fecha</th>
-      <td mat-cell *matCellDef="let element">{{element.createdAt | date: 'yyyy/MM/dd'}}</td>
+      <td mat-cell *matCellDef="let element">{{element.createdAt | date: 'yyyy/MM/dd HH:mm'}}</td>
     </ng-container>
 
     <ng-container matColumnDef="description">
@@ -15,13 +15,18 @@
 
     <ng-container matColumnDef="debit">
       <th mat-header-cell *matHeaderCellDef>Cargos</th>
-      <td mat-cell *matCellDef="let element">{{element.credit}}</td>
+      <td mat-cell *matCellDef="let element">{{element.credit | currency: 'CLP'}}</td>
     </ng-container>
 
 
     <ng-container matColumnDef="credit">
       <th mat-header-cell *matHeaderCellDef>Abono</th>
-      <td mat-cell *matCellDef="let element">{{element.debit}}</td>
+      <td mat-cell *matCellDef="let element">{{element.debit | currency: 'CLP'}}</td>
+    </ng-container>
+
+    <ng-container matColumnDef="balance">
+      <th mat-header-cell *matHeaderCellDef>Saldo</th>
+      <td mat-cell *matCellDef="let element">{{element.balance | currency: 'CLP'}}</td>
     </ng-container>
 
     <ng-container matColumnDef="expand">
