Feat(Deposit): Implement deposit view

--- a/src/styles/_utilities.scss
+++ b/src/styles/_utilities.scss
@@ -4,3 +4,5 @@
 @import "utilities/flex";
 @import "utilities/displays";
 @import "utilities/texts";
+@import "utilities/backgrounds";
+@import "utilities/border-radius";
