--- a/src/app/components/deposit-new/pages/deposit-new.component.html
+++ b/src/app/components/deposit-new/pages/deposit-new.component.html
@@ -1,3 +1,46 @@
 <mat-card class="py-6 px-7">
   <h1>Transferir</h1>
+  <div class="flex-gap-5 d-flex flex-wrap">
+    <div class="flex-grow-1 p-4">
+      <form class="d-flex flex-column flex-gap-5" *ngIf="recipientForm" [formGroup]="recipientForm">
+        <mat-form-field appearance="fill">
+          <mat-label>Destinatario</mat-label>
+          <mat-select formControlName="recipient" (selectionChange)="setCurrentRecipient($event)">
+            <mat-option *ngFor="let recipient of recipientList" [value]="recipient">{{
+              recipient.name | titlecase
+            }}</mat-option>
+          </mat-select>
+        </mat-form-field>
+        <mat-form-field appearance="fill">
+          <mat-label>Monto</mat-label>
+          <input matInput formControlName="amount" />
+        </mat-form-field>
+      </form>
+    </div>
+    <div class="p-4 flex-grow-1 d-flex flex-column flex-gap-1 border-radius-lg bg-light-gray">
+      <span class="font-weight-bold">Detalle del Destinatario</span>
+      <div>
+        <span>Nombre: </span><span class="font-weight-light">{{ currentRecipient?.name ?? '' }}</span>
+      </div>
+      <div>
+        <span>Correo: </span><span class="font-weight-light">{{ currentRecipient?.email ?? '' }}</span>
+      </div>
+      <div>
+        <span>Banco: </span><span class="font-weight-light">{{ currentRecipient?.bank ?? '' }}</span>
+      </div>
+      <div>
+        <span>Tipo de cuenta: </span><span class="font-weight-light">{{ currentRecipient?.accountType ?? '' }}</span>
+      </div>
+      <div>
+        <span>Numero de cuenta: </span
+        ><span class="font-weight-light">{{ currentRecipient?.accountNumber ?? '' }}</span>
+      </div>
+    </div>
+  </div>
+
+  <div class="text-right mt-4">
+    <button [disabled]="isSubmitting" mat-raised-button color="primary" class="mt-2 px-6" (click)="submit()">
+      Transferir
+    </button>
+  </div>
 </mat-card>
