--- a/src/app/components/home/components/user-list/user-list.component.html
+++ b/src/app/components/home/components/user-list/user-list.component.html
@@ -22,7 +22,7 @@
 
     <ng-container matColumnDef="accountType">
       <th mat-header-cell *matHeaderCellDef>Tipo de Cuenta</th>
-      <td mat-cell *matCellDef="let element">{{element.accountType}}</td>
+      <td mat-cell *matCellDef="let element">{{element.accountType.replace('-', ' ') | titlecase}}</td>
     </ng-container>
 
 
