--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -1,6 +1,6 @@
 <mat-toolbar [color]="'primary'">
   <div class="toolbar-container">
-    <div class='d-flex align-items-center'><span [routerLink]="['']" class='cursor-pointer'>Mi Banco</span></div>
+    <div class='d-flex align-items-center'><span [routerLink]="['']" class='cursor-pointer'>Mi Banco - Chek</span></div>
     <div class='toolbar-container-actions'>
       <button [routerLink]="['/new-recipient']" mat-raised-button color="basic" class="ml-5">Nuevo Destinatario</button>
       <button [routerLink]="['/deposit']" mat-raised-button color="basic" class="ml-5">Transferir</button>
